Update Config : cleaner

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,7 @@
-PORT=50001
+PORT=50000
 KEYSTORE_PATH=./keystore.jks
 RSA_KEYSTORE_FEATURE_ALIAS=mykey
 KEYSTORE_SERVER_ALIAS=server
+KEYSTORE_CLIENT_ALIAS=client
+CLIENT_CRT_PATH=./client.crt
+SERVER_CRT_PATH=./server.crt
